<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>
    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appBarLayout">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_filter"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="Фильтр карты">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <ScrollView

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Switch
                    android:id="@+id/filter_lib"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/lib_color"
                    android:checked="true"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingEnd="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/fil_lib"
                    android:textSize="18sp" />

            <CheckedTextView
                    android:id="@+id/filter_lib_wifi"
                    android:layout_width="match_parent"
                    android:checked="false"
                    android:layout_height="38dp"
                    android:gravity="center_vertical"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:drawableRight="?android:attr/listChoiceIndicatorSingle"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/fil_lib_wifi" />

            <CheckedTextView
                    android:id="@+id/filter_lib_coworking"
                    android:layout_width="match_parent"
                    android:checked="false"
                    android:layout_height="38dp"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:drawableRight="?android:attr/listChoiceIndicatorSingle"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/fil_lib_coworking" />

            <CheckedTextView
                    android:id="@+id/filter_lib_printer"
                    android:layout_width="match_parent"
                    android:checked="false"
                    android:layout_height="38dp"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:drawableRight="?android:attr/listChoiceIndicatorSingle"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/fil_lib_print" />

            <Switch
                    android:id="@+id/filter_books"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/store_color"
                    android:checked="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="15dp"
                    android:text="@string/fil_books"
                    android:textSize="18sp"
                    android:paddingEnd="15dp"
                    android:paddingStart="10dp" />

            <CheckedTextView
                    android:id="@+id/filter_books_wifi"
                    android:layout_width="match_parent"
                    android:checked="false"
                    android:layout_height="38dp"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:drawableRight="?android:attr/listChoiceIndicatorSingle"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/fil_books_wifi" />

            <CheckedTextView
                    android:id="@+id/filter_books_coworking"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:checked="false"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:drawableRight="?android:attr/listChoiceIndicatorSingle"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/fil_books_coworking" />

            <CheckedTextView
                    android:id="@+id/filter_books_cafe"
                    android:layout_width="match_parent"
                    android:checked="false"
                    android:layout_height="38dp"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:drawableRight="?android:attr/listChoiceIndicatorSingle"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/fil_books_cafe" />

            <Switch
                    android:id="@+id/filter_publ"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/pub_color"
                    android:checked="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="15dp"
                    android:text="@string/fil_public"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="15dp" />

            <CheckedTextView
                    android:id="@+id/filter_publ_your_book"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:checked="false"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:drawableRight="?android:attr/listChoiceIndicatorSingle"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/fil_public_your_book" />
            <CheckedTextView
                    android:id="@+id/filter_publ_store"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:checked="false"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:drawableRight="?android:attr/listChoiceIndicatorSingle"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/fil_public_store" />
            <CheckedTextView
                    android:id="@+id/filter_publ_online_store"
                    android:layout_width="match_parent"
                    android:checked="false"
                    android:layout_height="38dp"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:drawableRight="?android:attr/listChoiceIndicatorSingle"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/fil_public_online_store" />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="15dp"
                    android:background="#ababab" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>